--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "digdug-game",
+    "name": "taizo-hori",
     "version": "1.0.0",
     "description": "A faithful recreation of the classic 1982 Dig Dug arcade game using vanilla JavaScript and HTML5 Canvas",
     "keywords": [
