--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "taizo-hori",
     "version": "1.0.0",
-    "description": "A faithful recreation of the classic 1982 Dig Dug arcade game using vanilla JavaScript and HTML5 Canvas",
+    "description": "An updated recreation of the classic 1982 Dig Dug arcade game using vanilla JavaScript and HTML5 Canvas",
     "keywords": [
         "digdug",
         "dig dug",
