--- a/package.json
+++ b/package.json
@@ -22,13 +22,17 @@
     "license": "MIT",
     "author": "Ian Smith",
     "type": "module",
-    "main": "dist/digdug.js",
-    "module": "dist/digdug.esm.js",
-    "browser": "dist/digdug.umd.js",
+    "exports": {
+        ".": {
+            "import": "./dist/digdug.es.js",
+            "require": "./dist/digdug.umd.js"
+        }
+    },
+    "main": "./dist/digdug.umd.js",
+    "module": "./dist/digdug.es.js",
     "files": [
         "dist",
-        "assets",
-        "README.md"
+        "assets"
     ],
     "scripts": {
         "build": "vite build",
@@ -56,6 +60,7 @@
         "lint-staged": "^16.2.7",
         "prettier": "^3.8.1",
         "prettier-plugin-packagejson": "^3.0.0",
+        "terser": "^5.46.0",
         "vite": "^5.0.0"
     }
 }
