--- a/package.json
+++ b/package.json
@@ -13,8 +13,16 @@
         "javascript",
         "pixel-art",
         "namco",
-        "classic-game"
+        "classic-game",
+        "taizo-hori",
+        "browser-game",
+        "2d-game",
+        "vanilla-js"
     ],
+    "homepage": "https://github.com/IanSmith89/digdug#readme",
+    "bugs": {
+        "url": "https://github.com/IanSmith89/digdug/issues"
+    },
     "repository": {
         "type": "git",
         "url": "git+https://github.com/IanSmith89/digdug.git"
@@ -24,15 +32,16 @@
     "type": "module",
     "exports": {
         ".": {
+            "types": "./dist/index.d.ts",
             "import": "./dist/digdug.es.js",
             "require": "./dist/digdug.umd.js"
         }
     },
     "main": "./dist/digdug.umd.js",
     "module": "./dist/digdug.es.js",
+    "types": "./dist/index.d.ts",
     "files": [
-        "dist",
-        "assets"
+        "dist"
     ],
     "scripts": {
         "build": "vite build",
@@ -41,6 +50,7 @@
         "format:check": "prettier --check \"**/*.{js,json,md}\"",
         "lint": "eslint",
         "prepare": "husky",
+        "prepublishOnly": "npm run lint && npm run build",
         "preview": "vite preview"
     },
     "lint-staged": {
@@ -62,5 +72,8 @@
         "prettier-plugin-packagejson": "^3.0.0",
         "terser": "^5.46.0",
         "vite": "^5.0.0"
+    },
+    "engines": {
+        "node": ">=18.0.0"
     }
 }
